--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,9 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
 
     <application
@@ -15,11 +18,13 @@
         <activity
             android:name=".SignUpActivity"
             android:label="@string/app_name" >
+
         </activity>
         <activity
             android:name=".LoginActivity"
             android:label="@string/title_activity_login" >
         </activity>
+
         <activity
             android:name=".LauncherActivity"
             android:label="@string/title_activity_launcher" >
@@ -29,19 +34,22 @@
             android:name=".DiaryListActivity"
             android:label="@string/title_activity_diary_list" >
 
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
 
         </activity>
         <activity
             android:name=".EditDiaryActivity"
             android:label="@string/title_activity_edit_diary" >
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="qiminl.lifaryupdate.DiaryListActivity" />
         </activity>
+
     </application>
 
 </manifest>
